# BIOS-INTERACTIVEVIDEOWALL

./: CMakeLists.txt  Configuracion.xml  README.md
APP_INTERACTIVE_VIDEO_WALL/: CMakeLists.txt
GUI-INTERACTIVE_VIDEO_WALL/: CMakeLists.txt  Configuracion.xml
GUI-INTERACTIVE_VIDEO_WALL/IVW_APPLICATION/: CMakeLists.txt
GUI-INTERACTIVE_VIDEO_WALL/IVW_APPLICATION/apps/INTERACTIVEWALL_NKINECT/: CMakeLists.txt  main.cpp
GUI-INTERACTIVE_VIDEO_WALL/IVW_VIDEOPLAYER/: CMakeLists.txt  IVW_mainWindow.cpp  IVW_mainWindow.h  IVW_mainWindow.ui  IVW_setIcon.rc  ui_IVW_mainWindow.h
apps/INTERACTIVEWALL_1KINECT/: CMakeLists.txt  main.cpp
apps/INTERACTIVEWALL_2KINECT/: CMakeLists.txt
apps/INTERACTIVEWALL_NKINECT/: CMakeLists.txt  main.cpp
apps/InteractiveVideoWall/: main.cpp  setIcon.rc
apps/InteractiveVideoWall-Zoom/: CMakeLists.txt
apps/InteractiveVideoWall-Zoom/apps/InteractiveVideoWall/: CMakeLists.txt  main.cpp
apps/MultiHandInteractionTUIO/: CMakeLists.txt  main.cpp
apps/MultiUserInteractionTUIO/: CMakeLists.txt  main.cpp
apps/OPENCV_OPENNI1KINECT/: CMakeLists.txt  main.cpp
apps/OPENCV_OPENNI2KINECT/: CMakeLists.txt  main.cpp
apps/VideoPlayer/: CMakeLists.txt  IVW_mainWindow.cpp  IVW_mainWindow.h  IVW_mainWindow.ui  IVW_settingsWindow.cpp  IVW_settingsWindow.h  IVW_settingsWindow.ui  main.cpp  qplayer.qrc  ui_IVW_mainWindow.h  ui_IVW_settingsWindow.h
