project(BIOS-VIDEO_PLAYER)

find_package(Qt4 COMPONENTS QtCore QtGui Phonon QtNetwork QtMultimedia REQUIRED)
find_package(OpenCV REQUIRED)
include(${QT_USE_FILE})

set(INTERACTIVE_VIDEO_WALL_HEADERS IVW_mainWindow.h)
set(INTERACTIVE_VIDEO_WALL_SOURCES IVW_mainWindow.cpp main.cpp IVW_setIcon.rc)
set(INTERACTIVE_VIDEO_WALL_UIS IVW_mainWindow.ui)
set(INTERACTIVE_VIDEO_WALL_RESOURCES qplayer.qrc)

qt4_wrap_cpp(INTERACTIVE_VIDEO_WALL_MOC ${INTERACTIVE_VIDEO_WALL_HEADERS})
qt4_wrap_ui(INTERACTIVE_VIDEO_WALL_UIS_H ${INTERACTIVE_VIDEO_WALL_UIS})
qt4_add_resources(INTERACTIVE_VIDEO_WALL_RESOURCES_CPP ${INTERACTIVE_VIDEO_WALL_RESOURCES})

include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_executable(INTERACTIVE_VIDEO_WALL
    ${INTERACTIVE_VIDEO_WALL_SOURCES}
    ${INTERACTIVE_VIDEO_WALL_MOC}
    ${INTERACTIVE_VIDEO_WALL_UIS_H}
    ${INTERACTIVE_VIDEO_WALL_RESOURCES_CPP}
)

target_link_libraries(INTERACTIVE_VIDEO_WALL ${QT_LIBRARIES} ${OpenCV_LIBS})